packages/recomponents/src/styles/helpers.scss
/**
 * Flex Helpers
 */
.r-no-flex {
    width: auto;
    flex: 0 0 auto !important;
}

.r-stack-xs {
    margin: 0 0 4px 0 !important;
}

.r-align-items-center {
    align-items: center !important;
}

.r-inline-s {
    margin: 0 8px 0 0 !important;
    margin: 0 0.8rem 0 0 !important;
}

/**
 * Text color
 */
.r-text-muted {
    color: var(--mono-color-800) !important;
}

/**
 * Cursor Type
 */
.r-cursor-pointer {
    cursor: pointer !important;
}


$spacing-scale: (default, xxs, xs, s, m, l, xl);

$directions: (
    t: top,
    b: bottom,
    l: left,
    r: right,
);

/**
* Generate margin helper classes like r-mt-xl, r-mr-xxs, etc.
*/
@each $scale in $spacing-scale {
    @each $shortcut, $direction in $directions {
        .r-m#{$shortcut}-#{$scale} {
            margin-#{$direction}: var(--space-#{$scale});
        }
    }
}

/**
 * Prevent scroll
 */
.r-no-scroll {
    overflow: hidden !important;
}

/**
 * Position relative
 */
.r-position-relative {
    position: relative !important;
}

/**
 * Position absolute
 */
.r-position-absolute {
    position: absolute !important;
}

